--- a/index.html
+++ b/index.html
@@ -40,12 +40,26 @@
         86% { color: red; }
         100% { color: orange; }
       }
+      .inside {
+        margin-top: 50px;
+        font-size: larger;
+      }
+      #note {
+        font-size:smaller
+      }
    </style>
+     <body>
       <div class="sampul-raya">
-     <h1 id="top">Topic</h1>
-    <p>i will rizz up for gf👍</p>
-    <p>-best regards,<br>
-        -name-</p>
+     <h1 id="top">Kad Ucapan Raya!</h1>
+    <p class="inside">Semalam makan kuih bangkit,<br>
+       <br>Hari ni dodol pulak mari.<br>
+         <br>Baju Raya masih pakai balik,<br>
+       <br>Mak cakap, “Selagi tak kotor, pakai lagi!” <br>
+      <br>Selamat Hari Raya semua,<br>
+    <br>Maaf Zahir dan juga Batin.<br>
+    <br>Moga Syawal bawa bahagia<br>
+    <br>Hati gembira, senyum manis terjamin!</p>
+    <p id="note">*Walaupun lambat, Raya jugak kan? wkwkwkw*<br></p>
      </div>
     </body>
   </html>
