--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     function signin() {
       document.getElementById("sign-in");
       console.log("Signed in! Moving to the next page...");
-      alert("Signed in!")
+      alert("Signed in!");
     }
    </script>
    </body>
